v4.9.0/_sources/generated/pcdsdevices.mirror.KBOMirror.rst.txt
pcdsdevices.mirror.KBOMirror
============================

.. currentmodule:: pcdsdevices.mirror

.. autoclass:: KBOMirror

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - x
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:X``
          - 
          - hinted
          - 
    
        * - y
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:Y``
          - 
          - hinted
          - 
    
        * - pitch
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:PITCH``
          - 
          - hinted
          - 
    
        * - bender_us
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:BEND:US``
          - 
          - hinted
          - 
    
        * - bender_ds
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:BEND:DS``
          - 
          - hinted
          - 
    
        * - x_enc_rms
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ENC:X:RMS``
          - 
          - normal
          - 
    
        * - y_enc_rms
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ENC:Y:RMS``
          - 
          - normal
          - 
    
        * - pitch_enc_rms
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ENC:PITCH:RMS``
          - 
          - normal
          - 
    
        * - bender_us_enc_rms
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ENC:BEND:US:RMS``
          - 
          - normal
          - 
    
        * - bender_ds_enc_rms
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ENC:BEND:DS:RMS``
          - 
          - normal
          - 
    
        * - us_rtd
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:RTD:BEND:US:1_RBV``
          - 
          - normal
          - 
    
        * - ds_rtd
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``:RTD:BEND:DS:1_RBV``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: transmission
    
    